# crazyfileDemo

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.backup  README.md  connection_test.html  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  setup.py  start.sh
.github/workflows/: deploy-frontend.yml
backend/: env.example  main.py  railway-start.sh  requirements-railway.txt  start.sh
backend/algorithms/: trajectory_planner.py
backend/simulators/: mock_simulator.py  ros2_simulator.py
backend/tests/: test_system.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  MIGRATION_TO_ROS2.md
firmware/: README.md  build.sh  flash.sh  setup.sh
firmware/configs/: pid_aggressive.h  pid_smooth.h
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  experiments.js  visualization.js
